[gd_scene load_steps=5 format=3 uid="uid://bsueux4nuqrkn"]

[ext_resource type="Script" path="res://scripts/survivors_game.gd" id="1_5xidr"]
[ext_resource type="PackedScene" uid="uid://bbg3l1srm60iq" path="res://scenes/player.tscn" id="1_m2mta"]
[ext_resource type="PackedScene" uid="uid://ck13uxrrf0o73" path="res://scenes/pine_tree.tscn" id="2_3e586"]

[sub_resource type="Curve2D" id="Curve2D_huqon"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -146, -158, 0, 0, 0, 0, 2064, -163, 0, 0, 0, 0, 2052, 1171, 0, 0, 0, 0, -151, 1157, 0, 0, 0, 0, -141, -158, 0, 0, 0, 0, -146, -158)
}
point_count = 6

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_5xidr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Player" parent="." instance=ExtResource("1_m2mta")]
position = Vector2(864, 970)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-864, -970)
curve = SubResource("Curve2D_huqon")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-146, -158)
rotation = -0.00226244

[node name="PineTree" parent="." instance=ExtResource("2_3e586")]
position = Vector2(204, 141)

[node name="PineTree2" parent="." instance=ExtResource("2_3e586")]
position = Vector2(336, 541)

[node name="PineTree3" parent="." instance=ExtResource("2_3e586")]
position = Vector2(846, 107)

[node name="PineTree4" parent="." instance=ExtResource("2_3e586")]
position = Vector2(1656, 173)

[node name="PineTree7" parent="." instance=ExtResource("2_3e586")]
position = Vector2(1665, 355)

[node name="PineTree8" parent="." instance=ExtResource("2_3e586")]
position = Vector2(1822, 523)

[node name="PineTree9" parent="." instance=ExtResource("2_3e586")]
position = Vector2(1568, 893)

[node name="PineTree10" parent="." instance=ExtResource("2_3e586")]
position = Vector2(1851, 963)

[node name="PineTree11" parent="." instance=ExtResource("2_3e586")]
position = Vector2(495, 920)

[node name="PineTree12" parent="." instance=ExtResource("2_3e586")]
position = Vector2(796, 942)

[node name="PineTree5" parent="." instance=ExtResource("2_3e586")]
position = Vector2(1791, 285)

[node name="PineTree6" parent="." instance=ExtResource("2_3e586")]
position = Vector2(1499, 217)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="GameOverScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.509804)

[node name="Label" type="Label" parent="GameOverScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "Game Over"

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
